# TIC-80

./: CMakeLists.txt
src/: cart.c  tools.c  tools.h
